Closed
Bug 1315262
Opened 9 years ago
Closed 9 years ago
Intermittent test_suspend.html,test_fetch_basic_http.html,test_fileBlobSubWorker.xul,test_child-src_worker_data.html,test_file.xul,test_chromeWorkerJSM.xul,test_child-src_worker.html | application crashed [@ js::ShapeTable::searchUnchecked<0>(jsid)]
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla53
| Tracking | Status | |
|---|---|---|
| firefox-esr45 | --- | unaffected |
| firefox50 | --- | unaffected |
| firefox51 | --- | unaffected |
| firefox52 | + | fixed |
| firefox53 | - | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: jandem)
References
Details
(Keywords: intermittent-failure)
Attachments
(1 file)
|
2.16 KB,
patch
|
jonco
:
review+
jcristau
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Updated•9 years ago
|
Summary: Intermittent dom/workers/test/test_suspend.html | application crashed [@ js::ShapeTable::searchUnchecked<0>(jsid)] → Intermittent dom/workers/test/test_suspend.html,test_fetch_basic_http.html,test_fileBlobSubWorker.xul | application crashed [@ js::ShapeTable::searchUnchecked<0>(jsid)]
Updated•9 years ago
|
Summary: Intermittent dom/workers/test/test_suspend.html,test_fetch_basic_http.html,test_fileBlobSubWorker.xul | application crashed [@ js::ShapeTable::searchUnchecked<0>(jsid)] → Intermittent test_suspend.html,test_fetch_basic_http.html,test_fileBlobSubWorker.xul,test_child-src_worker_data.html | application crashed [@ js::ShapeTable::searchUnchecked<0>(jsid)]
Updated•9 years ago
|
Summary: Intermittent test_suspend.html,test_fetch_basic_http.html,test_fileBlobSubWorker.xul,test_child-src_worker_data.html | application crashed [@ js::ShapeTable::searchUnchecked<0>(jsid)] → Intermittent test_suspend.html,test_fetch_basic_http.html,test_fileBlobSubWorker.xul,test_child-src_worker_data.html,test_file.xul | application crashed [@ js::ShapeTable::searchUnchecked<0>(jsid)]
Updated•9 years ago
|
Summary: Intermittent test_suspend.html,test_fetch_basic_http.html,test_fileBlobSubWorker.xul,test_child-src_worker_data.html,test_file.xul | application crashed [@ js::ShapeTable::searchUnchecked<0>(jsid)] → Intermittent test_suspend.html,test_fetch_basic_http.html,test_fileBlobSubWorker.xul,test_child-src_worker_data.html,test_file.xul,test_chromeWorkerJSM.xul | application crashed [@ js::ShapeTable::searchUnchecked<0>(jsid)]
| Comment hidden (Intermittent Failures Robot) |
Updated•9 years ago
|
Summary: Intermittent test_suspend.html,test_fetch_basic_http.html,test_fileBlobSubWorker.xul,test_child-src_worker_data.html,test_file.xul,test_chromeWorkerJSM.xul | application crashed [@ js::ShapeTable::searchUnchecked<0>(jsid)] → Intermittent test_suspend.html,test_fetch_basic_http.html,test_fileBlobSubWorker.xul,test_child-src_worker_data.html,test_file.xul,test_chromeWorkerJSM.xul,test_child-src_worker.html | application crashed [@ js::ShapeTable::searchUnchecked<0>(jsid)]
| Assignee | ||
Comment 4•9 years ago
|
||
We shouldn't purge ShapeTables in the self-hosting zone, as that zone is shared with worker threads.
Assignee: nobody → jdemooij
Status: NEW → ASSIGNED
Flags: needinfo?(jdemooij)
Attachment #8810804 -
Flags: review?(jcoppeard)
| Assignee | ||
Comment 5•9 years ago
|
||
[Tracking Requested - why for this release]:
Crashes.
Blocks: 1314569
status-firefox50:
--- → affected
status-firefox51:
--- → unaffected
status-firefox52:
--- → affected
status-firefox53:
--- → affected
status-firefox-esr45:
--- → unaffected
tracking-firefox52:
--- → ?
tracking-firefox53:
--- → ?
| Assignee | ||
Updated•9 years ago
|
Comment 6•9 years ago
|
||
Comment on attachment 8810804 [details] [diff] [review]
Patch
Review of attachment 8810804 [details] [diff] [review]:
-----------------------------------------------------------------
::: js/src/jsfun.cpp
@@ +1595,5 @@
> if (comp->hasBeenEntered() && !rt->allowRelazificationForTesting)
> return;
>
> // Don't relazify if the compartment is being debugged or is the
> // self-hosting compartment.
We should probably update this comment to match.
Attachment #8810804 -
Flags: review?(jcoppeard) → review+
Pushed by jandemooij@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/8d6553075ae1
Don't purge shape tables in the self-hosting zone. r=jonco
Comment 8•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
| Assignee | ||
Comment 9•9 years ago
|
||
Comment on attachment 8810804 [details] [diff] [review]
Patch
Approval Request Comment
[Feature/regressing bug #]: Bug 1314569.
[User impact if declined]: Crashes.
[Describe test coverage new/current, TreeHerder]: Seems to fix oranges so far.
[Risks and why]: Low risk, just adds an extra check.
[String/UUID change made/needed]: None.
Attachment #8810804 -
Flags: approval-mozilla-aurora?
| Comment hidden (Intermittent Failures Robot) |
Comment 12•9 years ago
|
||
Comment on attachment 8810804 [details] [diff] [review]
Patch
fix crashes including oranges on treeherder, take in aurora52
Attachment #8810804 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 13•9 years ago
|
||
| bugherder uplift | ||
Updated•9 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•