Bug 1315262 - Don't purge shape tables in the self-hosting zone. r=jonco, a=gchang

--HG--
extra : source : 8d6553075ae1ce62d1032b13906892e508e9e1f7